force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/agf__ADM_Application_Approver__c.object-meta.xml
<CustomObject>
    <description>List of approvers for Releases or eReleases.</description>
    <label>Application Approver</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Application Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>