force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Application__c.field-meta.xml
<CustomField>
    <fullName>agf__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Application that this Approver supports.</description>
    <label>Application</label>
    <referenceTo>agf__ADM_Application__c</referenceTo>
    <relationshipLabel>Application Approvers</relationshipLabel>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>