force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Approval_Context__c.field-meta.xml
<CustomField>
    <fullName>agf__Approval_Context__c</fullName>
    <description>Inform Only -- This Approver will receive notification when an approval request is made.
May Approve -- This Approver, or any other Approver with the same role, may approve the request.
Must Approve -- This Approver must approve all requests. If multiple Approvers have Must Approve context for a role, all of them will be required to approve the request.
Notify When Approved -- The Approver will be notified only when the request has been Approved.</description>
    <inlineHelpText>Inform Only -- will receive all notifications; 
May Approve -- may approve the request;
Must Approve -- must approve all requests; 
Notify When Approved -- will be notified only when the request has been Approved.
Primary -- Cloud
Secondary -- Cloud</inlineHelpText>
    <label>Approval Context</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>agf__Approver_Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Inform Only</fullName>
            </value>
            <value>
                <fullName>May Approve</fullName>
            </value>
            <value>
                <fullName>Must Approve</fullName>
            </value>
            <value>
                <fullName>Notify When Approved</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Exception Primary</fullName>
            </value>
            <value>
                <fullName>Exception Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>