force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Approval_Type__c</fullName>
    <description>Type of approvals in which this Approver participates.</description>
    <inlineHelpText>Select the type of approvals in which this Approver participates.</inlineHelpText>
    <label>Approval Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eRelease</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Releases</fullName>
            </value>
            <value>
                <fullName>eReleases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>