force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Approver__c.field-meta.xml
<CustomField>
    <fullName>agf__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Users record of the Approver.</description>
    <inlineHelpText>Approver. Must be blank if Approver Email is a distribution list.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>