force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>agf__Approver_Email__c</fullName>
    <description>Email of Approver (may be blank if email is same as User email).</description>
    <inlineHelpText>Email of Approver. If Approver is specified, may be blank or must match Approver&apos;s User email. If Approver is not specified, this field may be set to a distribution list.</inlineHelpText>
    <label>Approver Email</label>
    <type>Email</type>
</CustomField>