force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Cloud__c.field-meta.xml
<CustomField>
    <fullName>agf__Cloud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cloud to which this Approver is related.</description>
    <inlineHelpText>Cloud to which this Approver is related.</inlineHelpText>
    <label>Cloud</label>
    <referenceTo>agf__ADM_Cloud__c</referenceTo>
    <relationshipLabel>Application Approvers</relationshipLabel>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>