force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Executive_Role__c.field-meta.xml
<CustomField>
    <fullName>agf__Executive_Role__c</fullName>
    <description>Title or role of Executive for &quot;Executive&quot; Approver Role.</description>
    <inlineHelpText>Enter the title or role of the Executive when &quot;Executive&quot; Approver Role is selected, otherwise leave blank.</inlineHelpText>
    <label>Executive Role</label>
    <length>32</length>
    <type>Text</type>
</CustomField>