force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/fields/agf__Functional_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Functional_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required when Approval_Role is &quot;Functional&quot;, otherwise must be blank. Scrum Team for which this Approver is providing functional approval.</description>
    <inlineHelpText>Enter Scrum Team represented by this Approver when &quot;Functional&quot; Approval Role is selected, otherwise leave blank.</inlineHelpText>
    <label>Functional Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Application Approvers</relationshipLabel>
    <relationshipName>Application_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>