force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Approval_Context_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Approval_Context_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( agf__Approval_Context__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>agf__Approval_Context__c</errorDisplayField>
    <errorMessage>The Approval Context must be specified.</errorMessage>
</ValidationRule>