force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Approver_Email_must_match_users_email.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Approver_Email_must_match_users_email</fullName>
    <active>true</active>
    <description>When a Approver user is specified, if an Email is also specified it much match the system&apos;s Email for that user.</description>
    <errorConditionFormula>NOT(ISBLANK(agf__Approver__c)) &amp;&amp; NOT(ISBLANK(agf__Approver_Email__c )) &amp;&amp; agf__Approver_Email__c &lt;&gt; agf__Approver__r.Email</errorConditionFormula>
    <errorDisplayField>agf__Approver_Email__c</errorDisplayField>
    <errorMessage>When an Approver is specified, Approver Email must be blank or match the user&apos;s system-defined email.</errorMessage>
</ValidationRule>