force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Approver_must_be_specified_for_Coverage.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Approver_must_be_specified_for_Coverage</fullName>
    <active>true</active>
    <description>An Approver must be specified for Role &quot;Release Coverage&quot;.</description>
    <errorConditionFormula>ISBLANK(agf__Approver__c) &amp;&amp; ISPICKVAL(agf__Approver_Role__c, &quot;Release Coverage&quot;)</errorConditionFormula>
    <errorDisplayField>agf__Approver__c</errorDisplayField>
    <errorMessage>You must specify an Approver for Approver Role &quot;Release Coverage&quot;.</errorMessage>
</ValidationRule>