force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Approver_or_Email_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Approver_or_Email_must_be_specified</fullName>
    <active>true</active>
    <description>Either an Approver or an Email must be specified.</description>
    <errorConditionFormula>ISBLANK(agf__Approver__c)   &amp;&amp;  ISBLANK(agf__Approver_Email__c )</errorConditionFormula>
    <errorMessage>You must specify either an Approver or an Email.</errorMessage>
</ValidationRule>