force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Approver_Role_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Approver_Role_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c , &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>agf__Approver_Role__c</errorDisplayField>
    <errorMessage>The Approver Role must be specified.</errorMessage>
</ValidationRule>