force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Approver_Type_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Approver_Type_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( agf__Approval_Type__c )</errorConditionFormula>
    <errorDisplayField>agf__Approval_Type__c</errorDisplayField>
    <errorMessage>Approval Type must be specified.</errorMessage>
</ValidationRule>