force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Cloud_must_be_blank_unless_Cloud_Leader.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Cloud_must_be_blank_unless_Cloud_Leader</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(agf__Approver_Role__c, &quot;Cloud Leader&quot;)) &amp;&amp;  NOT(ISBLANK(agf__Cloud__c))</errorConditionFormula>
    <errorDisplayField>agf__Cloud__c</errorDisplayField>
    <errorMessage>Cloud must be blank unless the Approval Role is Cloud Leader</errorMessage>
</ValidationRule>