force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Cloud_must_be_specified_for_Cloud_Leader.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Cloud_must_be_specified_for_Cloud_Leader</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c, &quot;Cloud Leader&quot;) &amp;&amp; ISBLANK(agf__Cloud__c)</errorConditionFormula>
    <errorDisplayField>agf__Cloud__c</errorDisplayField>
    <errorMessage>Cloud must be specified when Approval Role is Cloud Leader</errorMessage>
</ValidationRule>