force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Exec_Role_Blank_unless_Executive_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Exec_Role_Blank_unless_Executive_Role</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(agf__Executive_Role__c)) &amp;&amp; NOT(ISPICKVAL(agf__Approver_Role__c, &quot;Executive&quot;))</errorConditionFormula>
    <errorDisplayField>agf__Executive_Role__c</errorDisplayField>
    <errorMessage>Approver Role must be &quot;Executive&quot; when Executive Role is specified.</errorMessage>
</ValidationRule>