force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__ExecRole_Specified_For_Executive_Approvr.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ExecRole_Specified_For_Executive_Approvr</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c, &quot;Executive&quot;) &amp;&amp; ISBLANK(agf__Executive_Role__c)</errorConditionFormula>
    <errorDisplayField>agf__Executive_Role__c</errorDisplayField>
    <errorMessage>Executive Role must be specified when &quot;Executive&quot; Approver Role is selected.</errorMessage>
</ValidationRule>