force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Team_Blank_unless_Functional_ApproveRole.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Team_Blank_unless_Functional_ApproveRole</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(agf__Functional_Team__c)) &amp;&amp; NOT(ISPICKVAL(agf__Approver_Role__c, &quot;Functional&quot;))</errorConditionFormula>
    <errorDisplayField>agf__Approver_Role__c</errorDisplayField>
    <errorMessage>Approver Role must be &quot;Functional&quot; when Functional Team is specified.</errorMessage>
</ValidationRule>