force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Application_Approver__c/validationRules/agf__Team_Specified_Functional_Approver_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Team_Specified_Functional_Approver_Role</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c, &quot;Functional&quot;) &amp;&amp; ISBLANK(agf__Functional_Team__c)</errorConditionFormula>
    <errorDisplayField>agf__Functional_Team__c</errorDisplayField>
    <errorMessage>Functional Team must be specified when &quot;Functional&quot; Approver Role is selected.</errorMessage>
</ValidationRule>